# aiosoma

./: .all-contributorsrc  .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  renovate.json  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  labels.yml
docs/: conf.py  index.md  installation.md  usage.md
src/aiosoma/: __cli__.py  __init__.py  connect.py  shade.py  soma_connect.py  soma_shade.py
tests/: __init__.py  test_aiosoma.py  test_connect.py  test_main.py  test_shade.py
