[tool.poetry]
name = "aiosoma"
version = "0.2.0"
description = "Asyncio SOMA Connect"
authors = ["Avi Miller <me@dje.li>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Djelibeybi/aiosoma"
documentation = "https://aiosoma.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "aiosoma", from = "src" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Djelibeybi/aiosoma/issues"
"Changelog" = "https://github.com/Djelibeybi/aiosoma/blob/main/CHANGELOG.md"

[tool.poetry.scripts]
soma = "aiosoma.__cli__:cli"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.3"
backoff = "^2.2.1"
rich = "^12.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
pre-commit = "^2.20.0"
black = "^22.12.0"
isort = "^5.11.2"
pytest-asyncio = "^0.20.3"
pytest-aiohttp = "^1.0.4"
aioresponses = "^0.7.4"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = ">=0.16"
sphinx = ">=4.0"
sphinx-rtd-theme = ">=1.0"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/aiosoma/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=aiosoma --cov-report=term-missing:skip-covered --ignore src/aiosoma/__cli__.py"
pythonpath = ["src"]


[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]

[tool.isort]
profile = "black"
known_first_party = ["aiosoma", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "aiosoma.__cli__"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
